# nixie_clock

./: .gitignore  CMakeLists.txt  flash_openocd.cfg  nixie_clock.ioc  toolchain.cmake
Inc/: DS1307.h  main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
Src/: DS1307.c  main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  system_stm32f0xx.c
